fix thread local issues and move towards pure reactive processing